--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "express": "3.2.0",
-    "jade": "*",
-    "stylus": "*",
-    "socket.io": "*",
-    "pty.js": "*"
+    "jade": "1.3.1",
+    "stylus": "0.47.1",
+    "socket.io": "0.9",
+    "pty.js": "0.2.4"
   }
 }
