--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "application-name",
-  "version": "0.0.1",
+  "version": "0.0.1-4",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -10,7 +10,11 @@
     "jade": "1.3.1",
     "stylus": "0.47.1",
     "socket.io": "0.9",
-    "sandbox" : "0.8.6",
+    "sandbox": "0.8.6",
     "pty.js": "0.2.4"
+  },
+  "subdomain": "node-wings",
+  "engines": {
+    "node": "0.10.x"
   }
 }
