--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application-name",
-  "version": "0.0.1-5",
+  "name": "coding-trainer",
+  "version": "0.0.1-6",
   "private": true,
   "scripts": {
     "start": "node app.js"
